--- a/m3/w2/d3/homework/angular.json
+++ b/m3/w2/d3/homework/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -103,5 +104,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "ee98e3ea-a565-47ab-aac5-e0d037e376be"
   }
 }
