--- a/m4/w1/d3/HomeworkD3/.project
+++ b/m4/w1/d3/HomeworkD3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BE-03-22</name>
+	<name>HomeworkD3</name>
 	<comment></comment>
 	<projects>
 	</projects>
