--- a/m4/w3/d5/CatalogoBiblioteca/.project
+++ b/m4/w3/d5/CatalogoBiblioteca/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ex3</name>
+	<name>CatalogoBiblioteca</name>
 	<comment></comment>
 	<projects>
 	</projects>
